# cachebox

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  commitlint.config.mjs  release-plz.toml
.github/workflows/: ci.yml  release-assets.yml  release.yml
clients/python/: Cargo.toml  README.md  pyproject.toml
clients/python/python/cachebox/: __init__.py  async_client.py  cache.py  client.py  keys.py  protocol.py  serde.py
clients/python/src/: lib.rs
clients/python/tests/: test_ai_helpers.py  test_client.py  test_gevent.py  test_high_level_cache.py  test_high_level_foundation.py  test_package.py  test_protocol.py
clients/rust/cachebox-client/: Cargo.toml  README.md
clients/rust/cachebox-client/src/: ai.rs  lib.rs
crates/cachebox-protocol/: Cargo.toml
crates/cachebox-protocol/src/: lib.rs
docs/: README.md  ai-helpers.md  ai-native-cache.md  ai-native-goal-loop.md  architecture.md  benchmarks.md  checkpoints.md  future.md  internals.md  mvp-goal-loop.md  native-sockets.md  protocol.md  quickstart.md  redis-adapter.md  supported-behavior.md  usage.md
docs/internal/: README.md  ai-native-cache.md  ai-native-goal-loop.md  architecture.md  benchmarks.md  checkpoints.md  future.md  mvp-goal-loop.md  native-python-client-goal-loop.md  native-python-protocol-audit.md  native-socket-goal-loop.md  native-socket-performance-hardening.md  native-socket-protocol.md  native-socket-transport-audit.md  official-client-boundary-audit.md  official-client-goal-loop.md  performance-phase-2-access-accounting.md  performance-phase-2-adaptive-execution.md  performance-phase-2-baseline.md  performance-phase-2-buffer-reuse.md  performance-phase-2-client-batching.md  performance-phase-2-goal-loop.md  performance-phase-2-release-summary.md  performance-phase-2-tag-routing.md  performance-uplift-baseline.md  performance-uplift-borrowed-decode.md  performance-uplift-goal-loop.md  performance-uplift-metrics.md  performance-uplift-pipelining.md  performance-uplift-release-summary.md  performance-uplift-response-copy.md  performance-uplift-sharded-engine.md  performance-uplift-write-path.md  redis-adapter.md  supported-behavior.md
fixtures/native-protocol/v1/: README.md  frames.json
scripts/: release.py
src/: ai.rs  api.rs  client.rs  config.rs  engine.rs  lib.rs  main.rs  operation.rs  protocol.rs  server.rs
tests/: spawned_client.rs
