[package]
name = "cachebox"
version = "0.1.0"
edition = "2024"
description = "A cache-native server for modern self-hosted applications."
license = "MIT"
repository = "https://github.com/smarzola/cachebox"

[dependencies]
axum = "0.8.9"
bytes = "1.12.0"
http = "1.4.0"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-util", "macros", "rt-multi-thread", "net", "signal"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
