[package]
name = "cachebox-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for the official Cachebox client."
license = "MIT"
repository = "https://github.com/smarzola/cachebox"

[lib]
name = "_cachebox"
crate-type = ["cdylib"]

[dependencies]
cachebox-client = { path = "../rust/cachebox-client" }
cachebox-protocol = { path = "../../crates/cachebox-protocol" }
pyo3 = { version = "0.24.2", features = ["abi3-py311", "extension-module"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
