[package]
name = "cachebox-client"
version = "0.2.0"
edition = "2024"
description = "Official Rust client for Cachebox."
license = "MIT"
repository = "https://github.com/smarzola/cachebox"

[dependencies]
cachebox-protocol = { version = "0.2.0", path = "../../../crates/cachebox-protocol" }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-util", "net"] }
